This is my second upload,I have made change to the origin file

--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
 </style>
 </head>
 <body>
+
+    <h2>My name is Garry</h2>
+    <p>This my Website</p>
+
     <div>
     <li>Homepage</li>
     <li>Newspage</li>
