--- a/index.html
+++ b/index.html
@@ -16,11 +16,9 @@
         list-style-type: none;
     }
     div li:hover{
-        background-color: azure;
+        background-color: goldenrod;
         color: black;
         padding: 15px;
-
-
     }
     form{
         background-color: lightgray;
@@ -28,19 +26,19 @@
         text-align: center;
 
     }
-    form input:[type="text"]{
+    form input[type="text"]{
         background-color: green;
         color: white;
         text-align: center;
         padding: 10px;
-        font-size: 35px;
+        font-size: 18px;
     }
-    form input:[type="text"]{
+    form input[type="password"]{
         background-color: green;
         color: white;
         text-align: center;
         padding: 10px;
-        font-size: 35px;
+        font-size: 18px;
     }
     .btn{
         background-color: goldenrod;
@@ -61,7 +59,11 @@
     <li>Contact Us</li>
     </div>
 
-<hr>
+   <br>
+   <br>
+   <br>
+   <hr>
+   
     <form action=""method="post"autocomplete="off"style="margin-left:50px;">
     <p>Please login</p>
     <label for="">Username</label>
@@ -70,7 +72,7 @@
     <label for="">Password</label>
      <input type="password"name="password"id="password"><br>
      <br>
-     <input type="submit"name=btn_login  >
+     <input type="submit"name=btn_login value="Login"class="btn" >
     </form>
     
 
